--- a/NecoArcAntivirus/NecoArcAntivirus.csproj
+++ b/NecoArcAntivirus/NecoArcAntivirus.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediaToolkit.NetCore" Version="0.2.1-preview" />
+    </ItemGroup>
+
 </Project>
